--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2016.11 Configuration
+# Buildroot 2016.11-g566dd35-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_5=y
@@ -1314,7 +1314,7 @@ BR2_PACKAGE_NCURSES=y
 # BR2_PACKAGE_NEWT is not set
 # BR2_PACKAGE_PCRE is not set
 # BR2_PACKAGE_POPT is not set
-BR2_PACKAGE_READLINE=y
+# BR2_PACKAGE_READLINE is not set
 # BR2_PACKAGE_SLANG is not set
 # BR2_PACKAGE_TCLAP is not set
 # BR2_PACKAGE_USTR is not set
@@ -1748,8 +1748,7 @@ BR2_PACKAGE_INITSCRIPTS=y
 # BR2_PACKAGE_MC is not set
 # BR2_PACKAGE_NANO is not set
 # BR2_PACKAGE_UEMACS is not set
-BR2_PACKAGE_VIM=y
-# BR2_PACKAGE_VIM_RUNTIME is not set
+# BR2_PACKAGE_VIM is not set
 
 #
 # Filesystem images
