--- a/package/Config.in
+++ b/package/Config.in
@@ -911,6 +911,8 @@ menu "Crypto"
 	source "package/nettle/Config.in"
 	source "package/openssl/Config.in"
 	source "package/polarssl/Config.in"
+	source "package/polarssl-nl/Config.in"
+	source "package/pkcs11-helper-nl/Config.in"
 	source "package/tinydtls/Config.in"
 	source "package/trousers/Config.in"
 endmenu
@@ -1565,6 +1567,7 @@ endif
 	source "package/openssh/Config.in"
 	source "package/openswan/Config.in"
 	source "package/openvpn/Config.in"
+	source "package/openvpn-nl/Config.in"
 	source "package/p910nd/Config.in"
 	source "package/phidgetwebservice/Config.in"
 	source "package/portmap/Config.in"
