set defaults for missing configs

--- a/.config
+++ b/.config
@@ -1,12 +1,15 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2016.11-gcc9c922 Configuration
+# Buildroot 2016.11-g6b44bec Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_5=y
 BR2_HOST_GCC_AT_LEAST_4_6=y
 BR2_HOST_GCC_AT_LEAST_4_7=y
 BR2_HOST_GCC_AT_LEAST_4_8=y
+BR2_HOST_GCC_AT_LEAST_4_9=y
+BR2_HOST_GCC_AT_LEAST_5=y
+BR2_HOST_GCC_AT_LEAST_6=y
 
 #
 # Target options
@@ -837,6 +840,8 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_NETTLE is not set
 # BR2_PACKAGE_OPENSSL is not set
 # BR2_PACKAGE_POLARSSL is not set
+# BR2_PACKAGE_POLARSSL_NL is not set
+# BR2_PACKAGE_PKCS11_HELPER_NL is not set
 # BR2_PACKAGE_TINYDTLS is not set
 # BR2_PACKAGE_TROUSERS is not set
 
@@ -1507,6 +1512,7 @@ BR2_PACKAGE_MONGREL2_LIBC_SUPPORTS=y
 # BR2_PACKAGE_OPENSSH is not set
 # BR2_PACKAGE_OPENSWAN is not set
 # BR2_PACKAGE_OPENVPN is not set
+# BR2_PACKAGE_OPENVPN_NL is not set
 # BR2_PACKAGE_P910ND is not set
 # BR2_PACKAGE_PHIDGETWEBSERVICE is not set
 
