--- a/.config
+++ b/.config
@@ -1,15 +1,8 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2016.11-g6b44bec Configuration
+# Buildroot 2016.11-g0c85d9b Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
-BR2_HOST_GCC_AT_LEAST_4_5=y
-BR2_HOST_GCC_AT_LEAST_4_6=y
-BR2_HOST_GCC_AT_LEAST_4_7=y
-BR2_HOST_GCC_AT_LEAST_4_8=y
-BR2_HOST_GCC_AT_LEAST_4_9=y
-BR2_HOST_GCC_AT_LEAST_5=y
-BR2_HOST_GCC_AT_LEAST_6=y
 
 #
 # Target options
@@ -121,11 +114,12 @@ BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
 # BR2_TOOLCHAIN_EXTERNAL_DOWNLOAD is not set
 BR2_TOOLCHAIN_EXTERNAL_PREINSTALLED=y
-BR2_TOOLCHAIN_EXTERNAL_PATH="/opt/edes/toolchains/gcc-riscv-unknown-rv32ima-fx2-5-g8d480a9"
+BR2_TOOLCHAIN_EXTERNAL_PATH="/opt/edes/toolchains/gcc-riscv-unknown-rv32ima-fx3"
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="riscv32-unknown-linux-gnu"
 BR2_TOOLCHAIN_EXTERNAL_PREFIX="riscv32-unknown-linux-gnu"
 BR2_TOOLCHAIN_EXTERNAL_GLIBC=y
-BR2_TOOLCHAIN_EXTERNAL_GCC_6=y
+BR2_TOOLCHAIN_EXTERNAL_GCC_7=y
+# BR2_TOOLCHAIN_EXTERNAL_GCC_6 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_5 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_4_9 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_4_8 is not set
@@ -136,12 +130,12 @@ BR2_TOOLCHAIN_EXTERNAL_GCC_6=y
 # BR2_TOOLCHAIN_EXTERNAL_GCC_4_3 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_8 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_7 is not set
-# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_6 is not set
+BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_6=y
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_5 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_4 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_3 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_2 is not set
-BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_1=y
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_1 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_0 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_19 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_18 is not set
@@ -218,7 +212,12 @@ BR2_TOOLCHAIN_HEADERS_AT_LEAST_3_18=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_3_19=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_0=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_1=y
-BR2_TOOLCHAIN_HEADERS_AT_LEAST="4.1"
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_2=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_3=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_4=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_5=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_6=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST="4.6"
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_3=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_4=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_5=y
@@ -228,7 +227,8 @@ BR2_TOOLCHAIN_GCC_AT_LEAST_4_8=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_9=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_5=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_6=y
-BR2_TOOLCHAIN_GCC_AT_LEAST="6"
+BR2_TOOLCHAIN_GCC_AT_LEAST_7=y
+BR2_TOOLCHAIN_GCC_AT_LEAST="7"
 BR2_TOOLCHAIN_HAS_SYNC_1=y
 BR2_TOOLCHAIN_HAS_SYNC_2=y
 BR2_TOOLCHAIN_HAS_SYNC_4=y
@@ -1819,6 +1819,10 @@ BR2_TARGET_ROOTFS_CPIO_NONE=y
 # BR2_PACKAGE_HOST_JSMIN is not set
 # BR2_PACKAGE_HOST_LPC3250LOADER is not set
 # BR2_PACKAGE_HOST_LTTNG_BABELTRACE is not set
+
+#
+# mfgtools needs host gcc >= 4.8
+#
 # BR2_PACKAGE_HOST_MKE2IMG is not set
 # BR2_PACKAGE_HOST_MKPASSWD is not set
 # BR2_PACKAGE_HOST_MTD is not set
