--- a/.config
+++ b/.config
@@ -1,15 +1,8 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2016.11-g6b44bec Configuration
+# Buildroot 2016.11-g3e4f2d1 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
-BR2_HOST_GCC_AT_LEAST_4_5=y
-BR2_HOST_GCC_AT_LEAST_4_6=y
-BR2_HOST_GCC_AT_LEAST_4_7=y
-BR2_HOST_GCC_AT_LEAST_4_8=y
-BR2_HOST_GCC_AT_LEAST_4_9=y
-BR2_HOST_GCC_AT_LEAST_5=y
-BR2_HOST_GCC_AT_LEAST_6=y
 
 #
 # Target options
@@ -121,10 +114,11 @@ BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
 # BR2_TOOLCHAIN_EXTERNAL_DOWNLOAD is not set
 BR2_TOOLCHAIN_EXTERNAL_PREINSTALLED=y
-BR2_TOOLCHAIN_EXTERNAL_PATH="/opt/edes/toolchains/gcc-riscv-unknown-rv32ima-fx2-5-g8d480a9"
+BR2_TOOLCHAIN_EXTERNAL_PATH="/opt/edes/toolchains/gcc-riscv-unknown-rv32ima-fx3"
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="riscv32-unknown-linux-gnu"
 BR2_TOOLCHAIN_EXTERNAL_PREFIX="riscv32-unknown-linux-gnu"
 BR2_TOOLCHAIN_EXTERNAL_GLIBC=y
+# BR2_TOOLCHAIN_EXTERNAL_GCC_7 is not set
 BR2_TOOLCHAIN_EXTERNAL_GCC_6=y
 # BR2_TOOLCHAIN_EXTERNAL_GCC_5 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_4_9 is not set
@@ -1819,6 +1813,10 @@ BR2_TARGET_ROOTFS_CPIO_NONE=y
 # BR2_PACKAGE_HOST_JSMIN is not set
 # BR2_PACKAGE_HOST_LPC3250LOADER is not set
 # BR2_PACKAGE_HOST_LTTNG_BABELTRACE is not set
+
+#
+# mfgtools needs host gcc >= 4.8
+#
 # BR2_PACKAGE_HOST_MKE2IMG is not set
 # BR2_PACKAGE_HOST_MKPASSWD is not set
 # BR2_PACKAGE_HOST_MTD is not set
